install/rc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resource-consumer
  name: rc-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: resource-consumer
