install/rc-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-deployment
  labels:
    app: resource-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-consumer
  template:
    metadata:
      labels:
        app: resource-consumer
    spec:
      containers:
        - name: resource-consumer
          image: gcr.io/k8s-staging-e2e-test-images/resource-consumer:1.9
          resources:
            requests:
              cpu: "500m"
              memory: "250Mi"
            limits:
              cpu: "700m"
              memory: "500Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resource-consumer
  name: rc-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: resource-consumer
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rc-vpa
spec:
  host: rc-vpa-neu-cs6620.apps.smaug.na.operate-first.cloud
  to:
    kind: Service
    name: rc-service
  port:
    targetPort: 8080
